# Extractive-Nepali-QA

./: README.md  package-lock.json  package.json  pyproject.toml
extension/: manifest.json  package-lock.json  package.json
extension/scripts/: content_script.js  search.js
extension/view/: highlight.css  index.html  styles.css
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.tsx
frontend/src/components/: NepaliTransliteration.tsx  QAComponent.css  QAComponent.js  QAComponent.tsx
model/: model_evaluation.ipynb  model_training.ipynb
server/: .env.example  .gitignore  DocSearch.py  README.md  Scraper.py  main.py  requirements.txt  test.py
translation/: .gitignore  combine_data.py  graphs.ipynb  highlight_ans_in_context.py  squad_to_xlsx.py  testing_special_character.ipynb  xlsx_to_squad.py
translation/translated_with_special_symbol/: README.md
